2011-07-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R: added hidden argument to gbasicdialog of
	do.buttons. Set to FALSE to avoid buttons. (Then call dispose
	method on dialog to close within a handler) (Thanks Seb)

2011-07-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R (defaultWidget<-): added for consistency (thanks Ben)

2011-07-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbutton.R: put back to QPushButton so defaultWidget works

2011-07-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggroup.R: fix to use.scrollwindow. Put in large default
	minimum size for the widget, but this can be overridden via width,
	height arguments.

2011-07-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: added delete method for main window. (Thanks Ben)

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbigtable.R (gbigtable): error with sapply not being used (why not?)

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R: added size<- for columnWidths, rowHeights. Send in
	as list components

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (updateCallback): use taskCallback in place of
	timer to update.

2010-11-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fix to ".add" to show child so that delete/add
	will work together

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: added feature for from= being a vector of values
	(not necessarily regularly spaced)
	

2010-10-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: fix bug in check for integer values

	* R/gmenu.R: fix to adding popupmenu. Stil an issue with menus
	under OS X.

	* R/aabClasses.R: changed EventWidget from Container subclass to
	Widget subclass
