@@ -1,7 +1,5 @@
 TODO:
 ---------
-* look at add icons issue (seb)
-* delete(gwindow, object)
 * gbigtable use qdataFrame backend. DOesn't do editing though, it could
 * gtable is broken! indexin isn't right
 * gcheckboxgroup: [<- method working?
@@ -16,7 +14,8 @@ TODO:
 * gdfnotebook: How to deal with scratch df, names, column selection, ...
 * fix gmenu: both main menubar and popups (doesn't show up; no submenus)
 * gmenu under OS X, is odd.
-
+DONE * look at add icons issue (seb)
+DONE * delete(gwindow, object)
 DONE * gwindow -- how to make child transient for parent: http://stackoverflow.com/questions/4456252/qt-multiple-windows-in-a-parent-child-chain-parent-does-not-close-children
 DONE (qtutils) * ggraphics: Is this from qtpaint or qtdevice, seems like the latter
 DONE * ggraphics notebook needs writing 
